# GameplayAIAgent

./: .dockerignore  .gitignore  Dockerfile  README.md  ignore.txt  main.py  pyproject.toml  requirements.txt  supervisord.conf
application/: agent_controller.py  composition.py
ckpt/curriculum/vectordb/: chroma.sqlite3
ckpt/vectordb/: chroma.sqlite3
domain/: exceptions.py
domain/models/: __init__.py  agent_state.py  belief.py  context.py  critique.py  desire.py  event.py  intention.py  message.py  observation.py  qa_entry.py  skill.py  task.py
domain/models/entities/: agent_state.py
domain/models/value_objects/: code_snippet.py  context.py  critique.py  event.py  message.py  observation.py  qa_entry.py  skill.py  task.py
domain/ports/: __init__.py  database_port.py  executor_port.py  game_env_port.py  game_environment_port.py  js_parser_port.py  llm_port.py  memory_port.py  observation_builder_port.py  parser_port.py  prompt_builder_port.py  qa_cache_port.py
domain/services/: __init__.py  critic.py  curriculum.py  environment_memory.py  planner.py  qa.py  skill.py
examples/: mineflayer.py
frontend/: README.md  index.html  tailwind.config.js  vite.config.js
frontend/src/: App.jsx
frontend/src/components/: AgentPlanning.jsx  Card.jsx  InventoryPanel.jsx  RelevantSkillSet.jsx  TaskInfo.jsx  TaskInput.jsx  WorldView.jsx
frontend/src/hooks/: useAgentSocket.js
frontend/src/services/: api.js
infrastructure/: utils.py
infrastructure/adapters/database/: __init__.py  chroma_database.py
infrastructure/adapters/game/: __init__.py
infrastructure/adapters/game/minecraft/: .gitignore  README.md  __init__.py  minecraft_environment.py  minecraft_observation_builder.py  mineflayer_api_client.py  mineflayer_environment.py  mineflayer_process.py
infrastructure/adapters/game/minecraft/mineflayer_server/: eula.txt  index.js  ops.json  package.json  server.properties  usercache.json
infrastructure/adapters/game/minecraft/mineflayer_server/world/: level.dat_old
infrastructure/adapters/llm/: __init__.py  gemini_llm.py  ollama_llm.py
infrastructure/caches/: chroma_qa_cache.py
infrastructure/parsers/: __init__.py  critic_parser.py  js_code_parser.py  qa_question_parser.py  task_parser.py
infrastructure/prompts/: __init__.py  registry.py  utils.py
infrastructure/prompts/builders/: _base.py  critic_prompt_builder.py  curriculum_prompt_builder.py  minecraft_observation_builder.py  planner_prompt_builder.py  qa_answer_prompt_builder.py  qa_question_prompt_builder.py  skill_description_prompt_builder.py
infrastructure/prompts/builders/minecraft/: critic_prompt_builder.py  curriculum_prompt_builder.py  planner_prompt_builder.py  qa_answer_prompt_builder.py  qa_question_prompt_builder.py  skill_description_prompt_builder.py
infrastructure/prompts/templates/minecraft/critic/: base.txt
infrastructure/websocket/: agent_ws_server.py
playground/: curriculum_demo.py
scripts/: test_mineflayer
tests/: README.md  conftest.py
tests/integration/: test_agent_workflow.py
tests/unit/: test_curriculum_service.py  test_mineflayer_environment.py  test_observation_builder.py  test_planner_service.py  test_qa_service.py
(+13 files in other folders)
